# moneyleh-app

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  drizzle.config.ts  lefthook.yml  package.json  tsconfig.json
drizzle/: 0000_broad_sugar_man.sql  0000_left_hairball.sql  0000_legal_fallen_one.sql  0000_luxuriant_zeigeist.sql  0000_nostalgic_nightcrawler.sql  0000_remarkable_manta.sql  0000_striped_toro.sql  0000_workable_madelyne_pryor.sql  0001_ancient_blob.sql  0001_noisy_expediter.sql  0001_outstanding_micromacro.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
scripts/: deploy_prod.sh  extract_db.sh
src/: errors.ts  index.ts
src/classifier/: .gitignore  main.py  pyproject.toml
src/db/: auth-schema.ts  company.seed.ts  db.ts  migrate.ts  schema.ts  seed.ts
src/frontend/: package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/frontend/src/: App.css  App.tsx  root.tsx  routeTree.gen.ts
src/lib/: auth.ts  dayjs.ts  email.ts  test-utils.ts  test.utils.ts
src/lib/csv/: csv.type.ts  directUpload.test.ts  directUpload.ts
src/lib/descriptionTagger/: base-classifier.ts  classifier-trainer-worker-pool.ts  classifier-trainer-worker.ts  classifier.utils.ts  descriptionTagger.test.ts  descriptionTagger.ts  knn-classifier.ts  naive-bayes-classifier.test.ts  naive-bayes-classifier.ts
src/routes/: account.test.ts  account.ts  card.test.ts  card.ts  company.test.ts  company.ts  route.types.ts  route.utils.ts  tag.test.ts  tag.ts  transaction.test.ts  transaction.ts  transaction.utils.ts  ui.test.ts  ui.ts
(+52 files in other folders)
