[project]
name = "classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "protobuf>=7.34.1",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "transformers==4.57.0",
    "typer>=0.24.1",
]
